0.6.10/_sources/gettingstarted/examples/gallery/auto_examples_analysis/a_decomposition/index.rst


.. _sphx_glr_gettingstarted_examples_gallery_auto_examples_analysis_a_decomposition:

.. _examples-analysis-decomposition-index:

Decomposition
-------------



.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="In this example, we perform the Evolving Factor Analysis">

.. only:: html

  .. image:: /gettingstarted/examples/gallery/auto_examples_analysis/a_decomposition/images/thumb/sphx_glr_plot_efa_thumb.png
    :alt:

  :ref:`sphx_glr_gettingstarted_examples_gallery_auto_examples_analysis_a_decomposition_plot_efa.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">EFA example</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="In this example, we perform the Evolving Factor Analysis of a TEST dataset (ref. Keller and Mas...">

.. only:: html

  .. image:: /gettingstarted/examples/gallery/auto_examples_analysis/a_decomposition/images/thumb/sphx_glr_plot_efa_keller_massart_thumb.png
    :alt:

  :ref:`sphx_glr_gettingstarted_examples_gallery_auto_examples_analysis_a_decomposition_plot_efa_keller_massart.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">EFA (Keller and Massart original example)</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="FastICA example">

.. only:: html

  .. image:: /gettingstarted/examples/gallery/auto_examples_analysis/a_decomposition/images/thumb/sphx_glr_plot_fast_ica_thumb.png
    :alt:

  :ref:`sphx_glr_gettingstarted_examples_gallery_auto_examples_analysis_a_decomposition_plot_fast_ica.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">FastICA example</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="In this example, we perform the 2D IRIS analysis of CO adsorption on a sulfide catalyst.">

.. only:: html

  .. image:: /gettingstarted/examples/gallery/auto_examples_analysis/a_decomposition/images/thumb/sphx_glr_plot_iris_thumb.png
    :alt:

  :ref:`sphx_glr_gettingstarted_examples_gallery_auto_examples_analysis_a_decomposition_plot_iris.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">2D-IRIS analysis example</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="In this example, we perform the MCR ALS optimization of a dataset corresponding to a HPLC-DAD r...">

.. only:: html

  .. image:: /gettingstarted/examples/gallery/auto_examples_analysis/a_decomposition/images/thumb/sphx_glr_plot_mcrals_chrom1_thumb.png
    :alt:

  :ref:`sphx_glr_gettingstarted_examples_gallery_auto_examples_analysis_a_decomposition_plot_mcrals_chrom1.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">MCR-ALS example (adapted from Jaumot et al. 2005)</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="In this example, we perform the MCR ALS optimization of the UV-vis of spectra resulting from a ...">

.. only:: html

  .. image:: /gettingstarted/examples/gallery/auto_examples_analysis/a_decomposition/images/thumb/sphx_glr_plot_mcrals_kinetics_thumb.png
    :alt:

  :ref:`sphx_glr_gettingstarted_examples_gallery_auto_examples_analysis_a_decomposition_plot_mcrals_kinetics.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">MCR-ALS with kinetic constraints</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="NMF analysis example">

.. only:: html

  .. image:: /gettingstarted/examples/gallery/auto_examples_analysis/a_decomposition/images/thumb/sphx_glr_plot_nmf_thumb.png
    :alt:

  :ref:`sphx_glr_gettingstarted_examples_gallery_auto_examples_analysis_a_decomposition_plot_nmf.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">NMF analysis example</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="PCA example (iris dataset)">

.. only:: html

  .. image:: /gettingstarted/examples/gallery/auto_examples_analysis/a_decomposition/images/thumb/sphx_glr_plot_pca_iris_thumb.png
    :alt:

  :ref:`sphx_glr_gettingstarted_examples_gallery_auto_examples_analysis_a_decomposition_plot_pca_iris.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">PCA example (iris dataset)</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="PCA analysis example">

.. only:: html

  .. image:: /gettingstarted/examples/gallery/auto_examples_analysis/a_decomposition/images/thumb/sphx_glr_plot_pca_spec_thumb.png
    :alt:

  :ref:`sphx_glr_gettingstarted_examples_gallery_auto_examples_analysis_a_decomposition_plot_pca_spec.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">PCA analysis example</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="SIMPLISMA example">

.. only:: html

  .. image:: /gettingstarted/examples/gallery/auto_examples_analysis/a_decomposition/images/thumb/sphx_glr_plot_simplisma_thumb.png
    :alt:

  :ref:`sphx_glr_gettingstarted_examples_gallery_auto_examples_analysis_a_decomposition_plot_simplisma.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">SIMPLISMA example</div>
    </div>


.. raw:: html

    </div>


.. toctree::
   :hidden:

   /gettingstarted/examples/gallery/auto_examples_analysis/a_decomposition/plot_efa
   /gettingstarted/examples/gallery/auto_examples_analysis/a_decomposition/plot_efa_keller_massart
   /gettingstarted/examples/gallery/auto_examples_analysis/a_decomposition/plot_fast_ica
   /gettingstarted/examples/gallery/auto_examples_analysis/a_decomposition/plot_iris
   /gettingstarted/examples/gallery/auto_examples_analysis/a_decomposition/plot_mcrals_chrom1
   /gettingstarted/examples/gallery/auto_examples_analysis/a_decomposition/plot_mcrals_kinetics
   /gettingstarted/examples/gallery/auto_examples_analysis/a_decomposition/plot_nmf
   /gettingstarted/examples/gallery/auto_examples_analysis/a_decomposition/plot_pca_iris
   /gettingstarted/examples/gallery/auto_examples_analysis/a_decomposition/plot_pca_spec
   /gettingstarted/examples/gallery/auto_examples_analysis/a_decomposition/plot_simplisma

